# hpv_tdm

./: .gitignore  AGENTS.md  README.md  README.zh.md  env.sh  eval.py  find_intital.py  find_params.py  main.py  opt.py  pyproject.toml  readme.md  result.py  results.ipynb  run.py  search.py  show.py  simulate.py  summary.py
.ipynb_checkpoints/: env-checkpoint.sh
conf/: evaluation.json  find_params.json  main.yaml  opt.yaml  run.yaml  search.json  simulate-aggregate.json  simulate.json
docs/: subtype_parameter_defaults.md
experiments/: Table_2_cost.xlsx  Table_3_icur.xlsx  main.py  price_demand_function.R  result.py
paper/: Table_1_strategies_choiced.xlsx  Table_s1_parameters_by_age_group.xlsx  main.py  results2.ipynb
src/: __init__.py  _demographic.py  _model_demographic.py  _model_hpv1.py  _model_hpv2.py  _sexual.py  ashpv_dense.py  ashpv_sparse.py  evaluation.py  life_table.py  model.py  opt.py  plot.py  utils.py
src/hpv_tdm/: __init__.py  _demographic.py  _sexual.py  evaluation.py  model.py
src/hpv_tdm/config/: __init__.py  base.py  evaluation.py  model.py  search.py
src/hpv_tdm/evaluator/: evaluator.py
src/hpv_tdm/model/: __init__.py  _demographic.py  _life_table.py  _sexual.py  aggregate.py  base.py  subtype_grouped.py
src/hpv_tdm/result/: __init__.py  _io.py  _plot.py  evaluation.py  search.py  simulation.py
src/hpv_tdm/search/: searcher.py
src/hpv_tdm/utils/: __init__.py
tests/: test_config.py  test_search.py  test_simulation.py
