[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "hpv_tdm"
version = "0.1.0"
description = "HPV transmission dynamics simulation and vaccination strategy search toolkit."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rong Zhiwei", email = "rongzhiwei@bjmu.edu.cn" }]
keywords = ["hpv", "vaccination", "transmission dynamics", "bayesian optimization"]
dependencies = [
  "h5py>=3.11.0",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "openpyxl>=3.1.0",
  "optuna>=3.6.0",
  "pandas>=2.2.0",
  "pydantic>=2.8.0",
  "scipy>=1.12.0",
  "seaborn>=0.13.0",
  "tables>=3.9.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
experiments = ["lifelines>=0.30.0"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I"]
